welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:1: error: Missing closing brace `}' assumed here
def avancex(x: Int) {
^MethodsPictureLarge:1: error: expected class or object definition
def avancex(x: Int) {
^MethodsPictureLarge:7: error: expected class or object definition
def brosse() {
^MethodsPictureLarge:12: error: expected class or object definition
def faireV(c: Color) {
^MethodsPictureLarge:30: error: expected class or object definition
def motif() {
^MethodsPictureLarge:47: error: expected class or object definition
def motifx(y:Int) {
^